--- a/index.html
+++ b/index.html
@@ -6,11 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Découvrez Kyoto</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Nunito+Sans:wght@200;300;400;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="#home">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#whatToDo">Que faire ?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#prices">Tarifs</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+            <img src="./img/menu.svg" alt="Logo menu" class="logo-menu">
 
+            <!-- <div id="home">
+                <img src="/img/logo-porte-japon.jpg" alt="Image représentant une porte japonaise" class="logoKyoto">
+                <h1>Découvrez Kyoto</h1>
+                <p class="subtitle">La ville impériale du Japon</p>
+                <a href="#whatToDo" class="btn-home">En savoir plus</a>
+            </div> -->
+        </nav>
     </header>
 
     <main>
@@ -20,6 +52,7 @@
     <footer>
 
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
